sam-internal/k8s-out/prd/prd-sam_gater/istio-mesh-webhook-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: istio-mesh-webhook
  namespace: mesh-control-plane
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-mesh-webhook
  template:
    metadata:
      annotations:
        madkub.sam.sfdc.net/allcerts: |-
          {
           "certreqs": [
            {
             "cert-type": "server",
             "kingdom": "prd",
             "name": "server-cert",
             "role": "istio-mesh-webhook.mesh-control-plane",
             "san": [
              "istio-mesh-webhook",
              "istio-mesh-webhook.mesh-control-plane",
              "istio-mesh-webhook.mesh-control-plane.svc",
              "istio-mesh-webhook.mesh-control-plane.svc.prd-sam_gater.prd.sam.sfdc.net"
             ]
            }
           ]
          }
        scheduler.alpha.kubernetes.io/critical-pod: ""
        sidecar.istio.io/inject: "false"
      labels:
        app: istio-mesh-webhook
    spec:
      containers:
      - args:
        - server
        - --cert
        - /server-cert/server/certificates/server.pem
        - --key
        - /server-cert/server/keys/server-key.pem
        - --port
        - "10443"
        image: ops0-artifactrepo2-0-prd.data.sfdc.net/sfci/servicemesh/istio-mesh-webhook:6cbda1da53642dd97c474553d5458b1dbaad2e5b
        imagePullPolicy: IfNotPresent
        name: istio-mesh-webhook
        ports:
        - containerPort: 10443
        readinessProbe:
          exec:
            command:
            - /bin/true
          initialDelaySeconds: 5
          periodSeconds: 30
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /etc/pki_service
          name: maddog-certs
        - mountPath: /server-cert
          name: server-cert
      - args:
        - /sam/madkub-client
        - --madkub-endpoint=https://10.254.208.254:32007
        - --maddog-endpoint=https://all.pkicontroller.pki.blank.prd.prod.non-estates.sfdcsd.net:8443
        - --maddog-server-ca=/maddog-certs/ca/security-ca.pem
        - --madkub-server-ca=/maddog-certs/ca/cacerts.pem
        - --cert-folders=server-cert:/server-cert/
        - --token-folder=/tokens/
        - --ca-folder=/maddog-certs/ca
        - --refresher
        - --run-init-for-refresher-mode
        image: ops0-artifactrepo2-0-prd.data.sfdc.net/docker-release-candidate/tnrp/sam/madkub:1.0.0-0000077-b1d3a629
        imagePullPolicy: IfNotPresent
        name: madkub-refresher
        resources: {}
        volumeMounts:
        - mountPath: /server-cert
          name: server-cert
        - mountPath: /maddog-certs/
          name: maddog-certs
        - mountPath: /tokens
          name: tokens
      nodeSelector:
        pool: prd-sam_gater
      serviceAccountName: istio-mesh-webhook-service-account
      volumes:
      - hostPath:
          path: /etc/pki_service
        name: maddog-certs
      - emptyDir:
          medium: Memory
        name: server-cert
      - emptyDir:
          medium: Memory
        name: tokens
